# neural-orientation-field

./: .gitignore  .gitmodules  README.md  flake.nix  neof_download_config.json  pyproject.toml
notebooks/: colmap-playground.ipynb  nerf-playground.ipynb  playground.ipynb
notebooks/neof/: neof-eval.ipynb  neof-playground.ipynb
notebooks/nerf/: nerf-eval.ipynb  nerf-playground.ipynb
notebooks/nerf-playground/: nerf-playground.ipynb
poster/: main.tex  poster.bib
project-final-paper/: main.aux  main.bbl  main.bcf  main.blg  main.out  main.tex  references.bib
project-milestone/: main.aux  main.bbl  main.bcf  main.blg  main.run.xml  main.tex  references.bib
project-proposal/: main.aux  main.bbl  main.bcf  main.blg  main.tex  references.bib
src/: project-setup.py
src/colmap/: colmap.py
src/hair_step/results/real_imgs/depth_map/: 31.npy  32.npy
src/hair_step/scripts/: README  img2strand.py
src/misc/: blender_cam_pose_gen.py  normalization.py  psnr.py  swap_channel.py
src/neural_orientation_field/: image_resize.py  imgui_utils.py  multiface_cam.py  project_setup.py  utils.py
src/neural_orientation_field/colmap/: colmap.py  colmap_utils.py  colmap_visualizer.py
src/neural_orientation_field/neof/: dataset.py  model.py  train.py  training_config.py  utils.py
src/neural_orientation_field/nerf/: colmap_to_cam_pose.py  dataset.py  model.py  nerf-playground.ipynb  train.py  training_config.py  utils.py
src/results/real_imgs/depth_map/: 22.npy
src/scripts/: README  img2depth.py
