[project]
name = "neural-orientation-field"
version = "0.1.0"
description = "Stanford CS229 final project."
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "argparse>=1.4.0",
    "beautifulsoup4>=4.12.3",
    "imgui-bundle>=1.5.2",
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.2.5",
    "matplotlib>=3.9.2",
    "numpy>=2.1.2",
    "opencv-python>=4.10.0.84",
    "pillow>=11.0.0",
    "pycolmap>=3.10.0",
    "pyglm>=2.7.3",
    "pyvista-imgui[imgui-bundle]>=0.5.0",
    "pyvista[all]>=0.44.1",
    "requests>=2.32.3",
    "scipy>=1.14.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
