[project]
name = "neural-orientation-field"
version = "0.1.0"
description = "Stanford CS229 final project."
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "argparse>=1.4.0",
    "autopep8>=2.3.1",
    "beautifulsoup4>=4.12.3",
    "imgui-bundle>=1.5.2",
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.2.5",
    "matplotlib>=3.9.2",
    "numpy<2",
    "opencv-python==4.5.5.64",
    "open3d==0.18",
    "pillow-heif==0.10.0",
    "pillow>=11.0.0",
    "pycolmap>=3.10.0",
    "pyglm>=2.7.3",
    "pyvista-imgui[imgui-bundle]>=0.5.0",
    "pyvista[all]>=0.44.1",
    "requests>=2.32.3",
    "scipy>=1.14.1",
    "tensorboard>=2.18.0",
    "torch==2.2.2",
    "torchaudio==2.2.2",
    "torchvision==0.17.2",
    "scikit-image==0.24",
    "tqdm>=4.67.0",
    "segment-anything",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
segment-anything = { git = "https://github.com/facebookresearch/segment-anything.git" }
